--- a/DK_QE_1_graded.ipynb
+++ b/DK_QE_1_graded.ipynb
@@ -15,9 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -68,9 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -90,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#read in the data\n",
@@ -109,9 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -148,9 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -341,9 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -366,9 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -515,9 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -604,9 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -655,9 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -693,9 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -821,9 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -857,9 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -966,15 +940,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Obtaining and reading in data: 33/33 of the whole grade\n",
+    "Obtaining and reading in data: 33/33 \n",
     "\n",
-    "Q1: outlier event: 20/33 of the whole grade - you had a plan for identifying the event, you knew where to extract the relevant lines of code. But you got too cought up with what was not working and you did not see the obvious: you could just complete Q1 after making the first plot by a simple internet search. \n",
+    "Q1: outlier event: 20/33 - you had a plan for identifying the event, you knew where to extract the relevant lines of code. But you got too cought up with what was not working and you did not see the obvious: you could just complete Q1 after making the first plot by a simple internet search. \n",
     "\n",
     "Q2: not done: 0/33\n",
     "\n",
-    " +10 for remembering you put it in PUIDATA and since you had issues with the pandas version but you had the right function call to conver the data\n",
+    " +15 for remembering you put it in PUIDATA, and since you had issues with the pandas version but you had the right function call to conver the data\n",
     "\n",
-    "Total 63/100"
+    "Total 68/100"
    ]
   },
   {
@@ -989,9 +963,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:p3env]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-p3env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1003,7 +977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
